kgateway-ambient/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: kgateway-system

spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      name: fixed-nodeport-params
      group: gateway.kgateway.dev
      kind: GatewayParameters
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
