kgateway-ambient/waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kgateway-waypoint
  namespace: bookinfo
  labels:
    app.kubernetes.io/part-of: bookinfo
    istio.io/waypoint-for: all
spec:
  gatewayClassName: kgateway-waypoint
  listeners:
    - name: proxy
      port: 15088
      protocol: istio.io/PROXY
