kgateway-ambient/simpleroute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: oteldemoroute
  namespace: otel-demo
spec:
  parentRefs:
    - name: oteldemo-gateway
      namespace: kgateway-system
  rules:
    - backendRefs:
        - name: frontend-proxy
          port: 8080
---
